Whitespace fix

--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -72,7 +72,6 @@
     margin-bottom: 5rem;
   }
   #see-more-projects {
-    margin-top: 60px;
     text-align: right;
   }
 }
