--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ a:hover {
   }
 
   .projects-container {
-    height: calc(100vh - 150px);
+    height: calc(100vh - 200px);
   }
 
   .projects {
